ajout des boutons filtres aux formats desktop et mobile

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,38 @@
                         <a href="#Activités">Activités</a>
                     </div>
                 </nav>
-     
     </header>
+    <main>
+        <div class="filter-banner">
+            <div class="trouver-emplacement">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+                <form name="recherche" action="get" class="form-search">
+
+                    <button type="button" class="search-position"><i class="fa-solid fa-location-dot"></i></button><input type="text" class="search-field" value="Marseille, France" size="15"><button type="submit" class="search-submit">Rechercher</button>
+                </form>
+            </div>
+            <div class="filtrer-emplacement">
+                <h3>Filtres</h3>
+                <div class="tout-les-filtres">
+                    <div class="filter-button">
+                        <i class="fa-solid fa-money-bill-wave"></i>
+                        <div class="name-button">Économique</div>
+                    </div>
+                    <div class="filter-button">
+                        <i class="fa-solid fa-child-reaching"></i>
+                        <div class="name-button">Familial</div>
+                    </div>
+                    <div class="filter-button">
+                        <i class="fa-solid fa-heart"></i>
+                        <div class="name-button">Romantique</div>
+                    </div>
+                    <div class="filter-button">
+                        <i class="fa-solid fa-dog"></i>
+                        <div class="name-button">Animaux autorisés</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
