ajout section hebergement version mobile

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,9 @@
                     <h2>Hébergement à Marseille</h2>
                 </div>
                 <div class="tout-logement">
+                    <div class="titre-marseille-mobile">
+                        <h2>Hébergement à Marseille</h2>
+                    </div>
                     <article class="logement">
                         <div class="logement-photo">
                             <img src="/src/assets/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
@@ -220,6 +223,9 @@
                             <!--avis du logement-->
                         </div>
                     </article>
+                    <div class="afficher-plus-mobile">
+                        <a href="#">Afficher plus</a>
+                    </div>
                 </div>
                 <div class="afficher-plus">
                     <a href="#">Afficher plus</a>
