ajout section hebergement version tablette

--- a/src/index.html
+++ b/src/index.html
@@ -91,21 +91,23 @@
                                 alt="">
                             <!--photo de l'hebergement-->
                         </div>
-                        <div class="logement-titre">
-                            <h3>Auberge La Cannebière</h3>
-                            <!--titre du logement-->
-                        </div>
-                        <div class="logement-prix">
-                            <p>Nuit à partir de <span>25€</span></p>
-                            <!--prix du logement-->
-                        </div>
-                        <div class="logement-avis">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star empty"></i>
-                            <!--avis du logement-->
+                        <div class="detail-hebergement-marseille">
+                            <div class="logement-titre">
+                                <h3>Auberge La Cannebière</h3>
+                                <!--titre du logement-->
+                            </div>
+                            <div class="logement-prix">
+                                <p>Nuit à partir de <span>25€</span></p>
+                                <!--prix du logement-->
+                            </div>
+                            <div class="logement-avis">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <!--avis du logement-->
+                            </div>
                         </div>
                     </article>
                     <article class="logement">
@@ -114,21 +116,23 @@
                                 alt="">
                             <!--photo de l'hebergement-->
                         </div>
-                        <div class="logement-titre">
-                            <h3>Hôtel du port</h3>
-                            <!--titre du logement-->
-                        </div>
-                        <div class="logement-prix">
-                            <p>Nuit à partir de <span>52€</span></p>
-                            <!--prix du logement-->
-                        </div>
-                        <div class="logement-avis">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <!--avis du logement-->
+                        <div class="detail-hebergement-marseille">
+                            <div class="logement-titre">
+                                <h3>Hôtel du port</h3>
+                                <!--titre du logement-->
+                            </div>
+                            <div class="logement-prix">
+                                <p>Nuit à partir de <span>52€</span></p>
+                                <!--prix du logement-->
+                            </div>
+                            <div class="logement-avis">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <!--avis du logement-->
+                            </div>
                         </div>
                     </article>
                     <article class="logement">
@@ -137,21 +141,23 @@
                                 alt="">
                             <!--photo de l'hebergement-->
                         </div>
-                        <div class="logement-titre">
-                            <h3>Hôtel Les mouettes</h3>
-                            <!--titre du logement-->
-                        </div>
-                        <div class="logement-prix">
-                            <p>Nuit à partir de <span>76€</span></p>
-                            <!--prix du logement-->
-                        </div>
-                        <div class="logement-avis">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star empty"></i>
-                            <!--avis du logement-->
+                        <div class="detail-hebergement-marseille">
+                            <div class="logement-titre">
+                                <h3>Hôtel Les mouettes</h3>
+                                <!--titre du logement-->
+                            </div>
+                            <div class="logement-prix">
+                                <p>Nuit à partir de <span>76€</span></p>
+                                <!--prix du logement-->
+                            </div>
+                            <div class="logement-avis">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <!--avis du logement-->
+                            </div>
                         </div>
                     </article>
                     <article class="logement">
@@ -160,21 +166,23 @@
                                 alt="">
                             <!--photo de l'hebergement-->
                         </div>
-                        <div class="logement-titre">
-                            <h3>Hôtel de la mer</h3>
-                            <!--titre du logement-->
-                        </div>
-                        <div class="logement-prix">
-                            <p>Nuit à partir de <span>46€</span></p>
-                            <!--prix du logement-->
-                        </div>
-                        <div class="logement-avis">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star empty"></i>
-                            <i class="fa-solid fa-star empty"></i>
-                            <!--avis du logement-->
+                        <div class="detail-hebergement-marseille">
+                            <div class="logement-titre">
+                                <h3>Hôtel de la mer</h3>
+                                <!--titre du logement-->
+                            </div>
+                            <div class="logement-prix">
+                                <p>Nuit à partir de <span>46€</span></p>
+                                <!--prix du logement-->
+                            </div>
+                            <div class="logement-avis">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <!--avis du logement-->
+                            </div>
                         </div>
                     </article>
                     <article class="logement">
@@ -183,21 +191,23 @@
                                 alt="">
                             <!--photo de l'hebergement-->
                         </div>
-                        <div class="logement-titre">
-                            <h3>Auberge Le Panier</h3>
-                            <!--titre du logement-->
-                        </div>
-                        <div class="logement-prix">
-                            <p>Nuit à partir de <span>23€</span></p>
-                            <!--prix du logement-->
-                        </div>
-                        <div class="logement-avis">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star empty"></i>
-                            <!--avis du logement-->
+                        <div class="detail-hebergement-marseille">
+                            <div class="logement-titre">
+                                <h3>Auberge Le Panier</h3>
+                                <!--titre du logement-->
+                            </div>
+                            <div class="logement-prix">
+                                <p>Nuit à partir de <span>23€</span></p>
+                                <!--prix du logement-->
+                            </div>
+                            <div class="logement-avis">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <!--avis du logement-->
+                            </div>
                         </div>
                     </article>
                     <article class="logement">
@@ -206,21 +216,23 @@
                                 alt="">
                             <!--photo de l'hebergement-->
                         </div>
-                        <div class="logement-titre">
-                            <h3>Hôtel chez Amina</h3>
-                            <!--titre du logement-->
-                        </div>
-                        <div class="logement-prix">
-                            <p>Nuit à partir de <span>96€</span></p>
-                            <!--prix du logement-->
-                        </div>
-                        <div class="logement-avis">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <!--avis du logement-->
+                        <div class="detail-hebergement-marseille">
+                            <div class="logement-titre">
+                                <h3>Hôtel chez Amina</h3>
+                                <!--titre du logement-->
+                            </div>
+                            <div class="logement-prix">
+                                <p>Nuit à partir de <span>96€</span></p>
+                                <!--prix du logement-->
+                            </div>
+                            <div class="logement-avis">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <!--avis du logement-->
+                            </div>
                         </div>
                     </article>
                     <div class="afficher-plus-mobile">
