ajout activités version desktop

--- a/src/index.html
+++ b/src/index.html
@@ -327,5 +327,58 @@
                 </div>
             </div>
         </section>
+        <section class="marseille-activites">
+            <div class="titre-activite">
+                <h2>Activités à Marseille</h2>
+            </div>
+            <div class="activites">
+                <div class="activites-xl">
+                    <article class="card-xl">
+                        <img src="/src/assets/images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                            alt="">
+                        <div class="name-card-xl">
+                            <h3>Vieux Port</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="activites-l-s">
+                    <article class="card-l">
+                        <img src="/src/assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+                        <div class="name-card-l">
+                            <h3>Fort de Pomègues</h3>
+                        </div>
+                    </article>
+                    <article class="card-s">
+                        <img src="/src/assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+                        <div class="name-card-s">
+                            <h3>Îles du Frioul</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="activites-xl">
+                    <article class="card-xl">
+                        <img src="/src/assets/images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                            alt="">
+                        <div class="name-card-xl">
+                            <h3>Parc National des Calanques</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="activites-m-m">
+                    <article class="card-m">
+                        <img src="/src/assets/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+                        <div class="name-card-m">
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </div>
+                    </article>
+                    <article class="card-m">
+                        <img src="/src/assets/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+                        <div class="name-card-m">
+                            <h3>Parc Longchamp</h3>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
